--- a/project.config
+++ b/project.config
@@ -9,5 +9,6 @@
 	label-Code-Review = -2..+2 group approvers-platform-build
 	forgeCommitter = group AOSP
 	push = group AOSP
+	label-Verified = -1..+1 group AOSP
 [access]
 	inheritFrom = Platform-Projects
