Include extra licenses in vendor image NOTICE file
If building with with a vendor image, ensure that the licenses from
extra partitions are included in the vendor NOTICE file (possibly in
addition to having them in the system NOTICE file) since they could come
from disperate source trees. This change does not affect existing NOTICE
files outside of the system partition. (e.g. product and product_services).

This change also adds an ODM NOTICE file.

Bug: 13467960
Test: Built a vendor image enabled target and ensured the notices were in the
proper file
Change-Id: Ib17c7d7f84805734de09e686a4835b9b680b4192

--- a/core/Makefile
+++ b/core/Makefile
@@ -1170,7 +1170,8 @@ endif # TARGET_NO_KERNEL
 .PHONY: notice_files
 
 # Create the rule to combine the files into text and html/xml forms
-# $(1) - xml_excluded_vendor_product|xml_vendor|xml_product|html
+# $(1) - xml_excluded_system_product_odm|xml_excluded_vendor_product_odm
+#        xml_product|xml_product_services|xml_odm|html
 # $(2) - Plain text output file
 # $(3) - HTML/XML output file
 # $(4) - File title
@@ -1195,11 +1196,14 @@ $(2) $(3): PRIVATE_DIR := $(5)
 $(2) : $(3)
 $(3) : $(6) $(BUILD_SYSTEM)/Makefile build/make/tools/generate-notice-files.py
 	build/make/tools/generate-notice-files.py --text-output $(2) \
-	    $(if $(filter $(1),xml_excluded_extra_partitions),-e vendor -e product -e product_services --xml-output, \
-	      $(if $(filter $(1),xml_vendor),-i vendor --xml-output, \
+	    $(if $(filter $(1),xml_excluded_vendor_product_odm), -e vendor \
+	        -e product -e product_services -e odm --xml-output, \
+	      $(if $(filter $(1),xml_excluded_system_product_odm), -e system \
+	          -e system_other -e product -e product_services -e odm --xml-output, \
 	        $(if $(filter $(1),xml_product),-i product --xml-output, \
 	          $(if $(filter $(1),xml_product_services),-i product_services --xml-output, \
-	            --html-output)))) $(3) \
+	            $(if $(filter $(1),xml_odm),-i odm --xml-output, \
+	              --html-output))))) $(3) \
 	    -t $$(PRIVATE_MESSAGE) -s $$(PRIVATE_DIR)/src
 notice_files: $(2) $(3)
 endef
@@ -1252,6 +1256,11 @@ target_product_services_notice_file_xml := $(TARGET_OUT_INTERMEDIATES)/NOTICE_PR
 target_product_services_notice_file_xml_gz := $(TARGET_OUT_INTERMEDIATES)/NOTICE_PRODUCT_SERVICES.xml.gz
 installed_product_services_notice_xml_gz := $(TARGET_OUT_PRODUCT_SERVICES)/etc/NOTICE.xml.gz
 
+target_odm_notice_file_txt := $(TARGET_OUT_INTERMEDIATES)/NOTICE_ODM.txt
+target_odm_notice_file_xml := $(TARGET_OUT_INTERMEDIATES)/NOTICE_ODM.xml
+target_odm_notice_file_xml_gz := $(TARGET_OUT_INTERMEDIATES)/NOTICE_ODM.xml.gz
+installed_odm_notice_xml_gz := $(TARGET_OUT_ODM)/etc/NOTICE.xml.gz
+
 # Notice files are copied to TARGET_OUT_NOTICE_FILES as a side-effect of their module
 # being built. A notice xml file must depend on all modules that could potentially
 # install a license file relevant to it.
@@ -1261,18 +1270,33 @@ license_modules := $(filter-out $(TARGET_OUT_FAKE)/%,$(license_modules))
 # testcases are not relevant to the system image.
 license_modules := $(filter-out $(TARGET_OUT_TESTCASES)/%,$(license_modules))
 license_modules_vendor := $(filter $(TARGET_OUT_VENDOR)/%,$(license_modules))
+license_modules_odm := $(filter $(TARGET_OUT_ODM)/%,$(license_modules))
 license_modules_product := $(filter $(TARGET_OUT_PRODUCT)/%,$(license_modules))
 license_modules_product_services := $(filter $(TARGET_OUT_PRODUCT_SERVICES)/%,$(license_modules))
-license_modules_agg := $(license_modules_vendor) $(license_modules_product) $(license_modules_product_services)
-license_modules_rest := $(filter-out $(license_modules_agg),$(license_modules))
+license_modules_system := $(filter $(TARGET_OUT_ROOT) $(TARGET_OUT_SYSTEM_OTHER) $(TARGET_OUT_SYSTEM)/%,$(license_modules))
+#license_modules_recovery := $(filter $(TARGET_RECOVERY_OUT)/%,$(license_modules))
+license_modules_userdata := $(filter $(TARGET_OUT_DATA)%,$(license_modules))
+license_modules_agg := $(license_modules_system) \
+	               $(license_modules_vendor) \
+	               $(license_modules_product) \
+	               $(license_modules_product_services) \
+		       $(license_modules_odm) \
+		       $(license_modules_userdata)
+# If we are building a vendor image assume that the licenses for recovery and any
+# excess partitions should be surfaced via the vendor partition's NOTICE file
+ifdef BOARD_USES_VENDORIMAGE
+license_modules_vendor += $(filter-out $(license_modules_agg),$(license_modules))
+else
+license_modules_system += $(filter-out $(license_modules_agg),$(license_modules))
+endif
 
-$(eval $(call combine-notice-files, xml_excluded_extra_partitions, \
+$(eval $(call combine-notice-files, xml_excluded_vendor_product_odm, \
 	        $(target_notice_file_txt), \
 	        $(target_notice_file_xml), \
 	        "Notices for files contained in the filesystem images in this directory:", \
 	        $(TARGET_OUT_NOTICE_FILES), \
-	        $(license_modules_rest)))
-$(eval $(call combine-notice-files, xml_vendor, \
+	        $(license_modules_system)))
+$(eval $(call combine-notice-files, xml_excluded_system_product_odm, \
 	        $(target_vendor_notice_file_txt), \
 	        $(target_vendor_notice_file_xml), \
 	        "Notices for files contained in the vendor filesystem image in this directory:", \
@@ -1290,6 +1314,12 @@ $(eval $(call combine-notice-files, xml_product_services, \
 	        "Notices for files contained in the product_services filesystem image in this directory:", \
 	        $(TARGET_OUT_NOTICE_FILES), \
 	        $(license_modules_product_services)))
+$(eval $(call combine-notice-files, xml_odm, \
+	        $(target_odm_notice_file_txt), \
+	        $(target_odm_notice_file_xml), \
+	        "Notices for files contained in the odm filesystem image in this directory:", \
+	        $(TARGET_OUT_NOTICE_FILES), \
+	        $(license_modules_product_services)))
 
 $(target_notice_file_xml_gz): $(target_notice_file_xml) | $(MINIGZIP)
 	$(hide) $(MINIGZIP) -9 < $< > $@
@@ -1299,11 +1329,15 @@ $(target_product_notice_file_xml_gz): $(target_product_notice_file_xml) | $(MINI
 	$(hide) $(MINIGZIP) -9 < $< > $@
 $(target_product_services_notice_file_xml_gz): $(target_product_services_notice_file_xml) | $(MINIGZIP)
 	$(hide) $(MINIGZIP) -9 < $< > $@
+$(target_odm_notice_file_xml_gz): $(target_odm_notice_file_xml) | $(MINIGZIP)
+	$(hide) $(MINIGZIP) -9 < $< > $@
 $(installed_notice_html_or_xml_gz): $(target_notice_file_xml_gz)
 	$(copy-file-to-target)
 $(installed_vendor_notice_xml_gz): $(target_vendor_notice_file_xml_gz)
 	$(copy-file-to-target)
 $(installed_product_notice_xml_gz): $(target_product_notice_file_xml_gz)
+	$(copy-file-to-target)
+$(installed_odm_notice_xml_gz): $(target_odm_notice_file_xml_gz)
 	$(copy-file-to-target)
 
 # No notice file for product_services if its contents are merged into /product.
@@ -1319,6 +1353,7 @@ ifeq ($(ONE_SHOT_MAKEFILE),)
   ALL_DEFAULT_INSTALLED_MODULES += $(installed_vendor_notice_xml_gz)
   ALL_DEFAULT_INSTALLED_MODULES += $(installed_product_notice_xml_gz)
   ALL_DEFAULT_INSTALLED_MODULES += $(installed_product_services_notice_xml_gz)
+  ALL_DEFAULT_INSTALLED_MODULES += $(installed_odm_notice_xml_gz)
 endif
 endif # PRODUCT_NOTICE_SPLIT
 
