Check if correct header_version set for boot image
Android Boot Image format now has 3 versions: v0, v1, v2. Those are
backward compatible, each new version only adds new fields into image
header, and corresponding payloads appear in image:
  - v1 adds "Recovery DTBO" payload, which is controlled by
    BOARD_INCLUDE_RECOVERY_DTBO and BOARD_INCLUDE_RECOVERY_ACPIO
    variables in BoardConfig.mk
  - v2 adds "DTB" payload, which is controlled by
    BOARD_INCLUDE_DTB_IN_BOOTIMG variable in BoardConfig.mk

Vendor must define corresponding header_version in BOARD_MKBOOTIMG_ARGS
variable (in BoardConfig.mk file) if one of mentioned options is
enabled, as it stated in [1], like this:

    BOARD_MKBOOTIMG_ARGS := --header_version 2

Let's check if header_version is set correctly with respect to enabled
options, otherwise those won't be accessible from the bootloader.

[1] https://source.android.com/devices/bootloader/boot-image-header

Change-Id: I778b13149dd53fcd2703809151cb89e346e8b570
Signed-off-by: Sam Protsenko <semen.protsenko@linaro.org>

--- a/core/Makefile
+++ b/core/Makefile
@@ -1911,6 +1911,24 @@ ifdef BOARD_INCLUDE_DTB_IN_BOOTIMG
   INTERNAL_RECOVERYIMAGE_ARGS += --dtb $(INSTALLED_DTBIMAGE_TARGET)
 endif
 
+# Figure out the "--header_version" param value for mkbootimg tool
+BOOTIMG_HEADER_VER := $(shell echo $(BOARD_MKBOOTIMG_ARGS) | sed 's/.*--header_version\s*\([0-9]\+\).*/\1/;t;d')
+ifeq ($(BOOTIMG_HEADER_VER),)
+  BOOTIMG_HEADER_VER := 0
+endif
+
+# Check if BOARD_MKBOOTIMG_ARGS has correct header_version set
+ifdef BOARD_INCLUDE_DTB_IN_BOOTIMG
+  ifeq ($(shell test $(BOOTIMG_HEADER_VER) -lt 2; echo $$?),0)
+    $(error header_version must be 2 in order to use BOARD_INCLUDE_DTB_IN_BOOTIMG)
+  endif
+endif
+ifneq ($(or $(BOARD_INCLUDE_RECOVERY_DTBO),$(BOARD_INCLUDE_RECOVERY_ACPIO)),)
+  ifeq ($(shell test $(BOOTIMG_HEADER_VER) -lt 1; echo $$?),0)
+    $(error header_version must be 1 or 2 in order to use BOARD_INCLUDE_RECOVERY_DTBO/ACPIO)
+  endif
+endif
+
 # $(1): output file
 define build-recoveryimage-target
   # Making recovery image
