Set correct header_version for boot image
Android Boot Image format now has 3 versions: v0, v1, v2. Those are
backward compatible, each new version only adds new fields into image
header, and corresponding payloads appear in image:
  - v1 adds "Recovery DTBO" payload, which is controlled by
    BOARD_INCLUDE_RECOVERY_DTBO and BOARD_INCLUDE_RECOVERY_ACPIO
    variables in BoardConfig.mk
  - v2 adds "DTB" payload, which is controlled by
    BOARD_INCLUDE_DTB_IN_BOOTIMG variable in BoardConfig.mk

Let's set header_version field in boot.img accordingly, so that if
mentioned variables are set, bootloader is able to figure that out.
Without this change default header version is used (v0), which makes it
impossible to use v1 and v2 image versions in the bootloader.

Change-Id: I778b13149dd53fcd2703809151cb89e346e8b570
Signed-off-by: Sam Protsenko <semen.protsenko@linaro.org>

--- a/core/Makefile
+++ b/core/Makefile
@@ -1911,6 +1911,13 @@ ifdef BOARD_INCLUDE_DTB_IN_BOOTIMG
   INTERNAL_RECOVERYIMAGE_ARGS += --dtb $(INSTALLED_DTBIMAGE_TARGET)
 endif
 
+# Set correct header version for boot image
+ifdef BOARD_INCLUDE_DTB_IN_BOOTIMG
+  INTERNAL_RECOVERYIMAGE_ARGS += --header_version 2
+else ifneq ($(or $(BOARD_INCLUDE_RECOVERY_DTBO),$(BOARD_INCLUDE_RECOVERY_ACPIO)),)
+  INTERNAL_RECOVERYIMAGE_ARGS += --header_version 1
+endif
+
 # $(1): output file
 define build-recoveryimage-target
   # Making recovery image
