Ignore userdata modules when generating notice files
The user data partition is not populated for signed builds. Ignore
any modules intended for TARGET_OUT_DATA when generating the notice
files as they are not needed for shipping devices and can lead to over-building.

Bug: 137541999
Test: Built this CL and ensured that the userdata modules were no longer
being built/included due to notice file generation.

Change-Id: I7974d570c43724f30295f6f5eda00cba1b89268f

--- a/core/Makefile
+++ b/core/Makefile
@@ -1262,6 +1262,8 @@ license_modules := $(ALL_DEFAULT_INSTALLED_MODULES) $(kernel_notice_file) $(pdk_
 license_modules := $(filter-out $(TARGET_OUT_FAKE)/%,$(license_modules))
 # testcases are not relevant to the system image.
 license_modules := $(filter-out $(TARGET_OUT_TESTCASES)/%,$(license_modules))
+# ignore userdata modules
+license_modules := $(filter-out $(TARGET_OUT_DATA)/%,$(license_modules))
 license_modules_vendor := $(filter $(TARGET_OUT_VENDOR)/%,$(license_modules))
 license_modules_product := $(filter $(TARGET_OUT_PRODUCT)/%,$(license_modules))
 license_modules_system_ext := $(filter $(TARGET_OUT_SYSTEM_EXT)/%,$(license_modules))
