Add flag for virtual A/B.
- Add PRODUCT_VIRTUAL_AB_OTA(_RETROFIT)
- Set ro.virtual_ab.{enabled,retrofit} respectively.

Bug: 135752105
Test: build with device with flag set
Change-Id: I6cb1207aef3ddcc40e215e20589abf995ec81aac

--- a/core/Makefile
+++ b/core/Makefile
@@ -495,6 +495,12 @@ endif
 ifeq ($(PRODUCT_RETROFIT_DYNAMIC_PARTITIONS),true)
 	$(hide) echo ro.boot.dynamic_partitions_retrofit=true >> $@
 endif
+ifeq ($(PRODUCT_VIRTUAL_AB_OTA),true)
+	$(hide) echo ro.virtual_ab.enabled=true >> $@
+endif
+ifeq ($(PRODUCT_VIRTUAL_AB_OTA_RETROFIT),true)
+	$(hide) echo ro.virtual_ab.retrofit=true >> $@
+endif
 	$(hide) grep 'ro.product.first_api_level' $(intermediate_system_build_prop) >> $@ || true
 	$(hide) echo ro.vendor.build.security_patch="$(VENDOR_SECURITY_PATCH)">>$@
 	$(hide) echo ro.vendor.product.cpu.abilist="$(TARGET_CPU_ABI_LIST)">>$@
