Add misc_info.txt needed to build super.img
Previously, misc_info.txt is included only when super.img is included
in the update package. This CL adds it to the update package so
Goldfish-based products for emulator can use it to create a new super.img
later in TF pipeline so mixed-image tests can be performed.

A typical example for such mixed-image tests is GSI (aosp_x86) on
sdk_gphone_x86 or older aosp_x86 vendor images.

Bug: 138545354
Test: $ lunch aosp_x86-userdebug; m - j
      $ unzip -l $OUT/aosp*.zip | grep misc
      526  2019-07-22 14:50   misc_info.txt

Change-Id: I111716f499b031c03f2896299b7436a7611841b8

--- a/core/Makefile
+++ b/core/Makefile
@@ -4632,7 +4632,7 @@ INTERNAL_UPDATE_PACKAGE_TARGET := $(PRODUCT_OUT)/$(name).zip
 $(INTERNAL_UPDATE_PACKAGE_TARGET): $(BUILT_TARGET_FILES_PACKAGE) $(ZIP2ZIP)
 
 ifeq (true,$(BOARD_SUPER_IMAGE_IN_UPDATE_PACKAGE))
-$(INTERNAL_UPDATE_PACKAGE_TARGET): $(INTERNAL_SUPERIMAGE_DIST_TARGET)
+$(INTERNAL_UPDATE_PACKAGE_TARGET): $(INTERNAL_SUPERIMAGE_DIST_TARGET) $(INTERNAL_SUPERIMAGE_MISC_INFO)
 	@echo "Package: $@"
 	# Filter out super_empty and images in BOARD_SUPER_PARTITION_PARTITION_LIST.
 	# Filter out system_other for launch DAP devices because it is in super image.
@@ -4653,11 +4653,12 @@ $(INTERNAL_UPDATE_PACKAGE_TARGET): $(INTERNAL_SUPERIMAGE_DIST_TARGET)
 	$(if $(INTERNAL_SUPERIMAGE_MISC_INFO), zip -q -j -u $@ $(INTERNAL_SUPERIMAGE_MISC_INFO))
 	$(if $(INTERNAL_SUPERIMAGE_DIST_TARGET), zip -q -j -u $@ $(INTERNAL_SUPERIMAGE_DIST_TARGET))
 else
-$(INTERNAL_UPDATE_PACKAGE_TARGET):
+$(INTERNAL_UPDATE_PACKAGE_TARGET): $(INTERNAL_SUPERIMAGE_MISC_INFO)
 	@echo "Package: $@"
 	$(hide) $(ZIP2ZIP) -i $(BUILT_TARGET_FILES_PACKAGE) -o $@ \
 	  IMAGES/VerifiedBootParams.textproto:VerifiedBootParams.textproto \
 	  OTA/android-info.txt:android-info.txt "IMAGES/*.img:."
+	$(if $(INTERNAL_SUPERIMAGE_MISC_INFO), zip -q -j -u $@ $(INTERNAL_SUPERIMAGE_MISC_INFO))
 endif # BOARD_SUPER_IMAGE_IN_UPDATE_PACKAGE
 
 .PHONY: updatepackage
