Clear the boot image OS version and patch level field for AVB devices
AVB (VBOOT 2.0) devices should have per partition OS patch level in
partition vbmeta
(https://source.android.com/security/keystore/version-binding). Clear
the legacy boot header field (which was used by vboot 1.0) to ensure the
legacy field cannot be misused.

After this change is landed, a VTS testcase can be added to verify this
at runtime.

Bug: 211741246
Bug: 210367929
Test: Presubmit
Change-Id: I7c26fe373fa8bc3701e4d278e6b96f41cee061f2

--- a/core/Makefile
+++ b/core/Makefile
@@ -951,9 +951,17 @@ else ifndef BUILDING_VENDOR_BOOT_IMAGE # && BOARD_USES_GENERIC_KERNEL_IMAGE != t
   endif
 endif # BUILDING_VENDOR_BOOT_IMAGE == "" && BOARD_USES_GENERIC_KERNEL_IMAGE != true
 
-INTERNAL_MKBOOTIMG_VERSION_ARGS := \
-    --os_version $(PLATFORM_VERSION_LAST_STABLE) \
-    --os_patch_level $(PLATFORM_SECURITY_PATCH)
+# Assign boot partition system version & SPL value for Version Binding
+# (https://source.android.com/security/keystore/version-binding)
+ifdef BOARD_AVB_ENABLE
+  # AVB (VBOOT 2.0) should keep system version and SPL information in vbmeta.
+  INTERNAL_MKBOOTIMG_VERSION_ARGS :=
+else
+  # VBOOT 1.0 can store these value in the boot header.
+  INTERNAL_MKBOOTIMG_VERSION_ARGS := \
+      --os_version $(PLATFORM_VERSION_LAST_STABLE) \
+      --os_patch_level $(PLATFORM_SECURITY_PATCH)
+endif # BOARD_AVB_ENABLE
 
 ifdef BOARD_GKI_SIGNING_KEY_PATH
 ifndef BOARD_GKI_SIGNING_ALGORITHM
