Add option to package system build.prop into target_files.zip
So that releasetools preconditions can be satisfied by the
SYSTEM/build.prop file even when we are not building system.img.

Bug: 212486689
Bug: 213028932
Test: Dist build a system.img-less product
Change-Id: I2ce7f8b8ae981eaf06e2d8d2485b55b4e975caa9

--- a/core/Makefile
+++ b/core/Makefile
@@ -5079,6 +5079,10 @@ $(BUILT_TARGET_FILES_PACKAGE): \
 	@echo "Package target files: $@"
 	$(hide) rm -rf $@ $@.list $(zip_root)
 	$(hide) mkdir -p $(dir $@) $(zip_root)
+ifeq (true,$(PRODUCT_PACKAGE_SYSTEM_BUILD_PROP_IN_TARGET_FILES_PACKAGE))
+	$(hide) mkdir -p $(zip_root)/SYSTEM
+	$(hide) cp $(INSTALLED_BUILD_PROP_TARGET) $(patsubst $(TARGET_OUT)/%,$(zip_root)/SYSTEM/%,$(INSTALLED_BUILD_PROP_TARGET))
+endif
 ifneq (,$(INSTALLED_RECOVERYIMAGE_TARGET)$(filter true,$(BOARD_USES_RECOVERY_AS_BOOT))$(filter true,$(BOARD_MOVE_RECOVERY_RESOURCES_TO_VENDOR_BOOT)))
 	@# Components of the recovery image
 	$(hide) mkdir -p $(zip_root)/$(PRIVATE_RECOVERY_OUT)
